# Raylib-OpenCV-Face-Detector

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: camera_handler.cpp  camera_handler.h  face_cv.cpp  face_cv.h  main.cpp  raylib_utils.cpp  raylib_utils.h  rlights.h
